// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button when rendered as a button renders correctly 1`] = `
<div>
  <button
    class="fui-Button"
    type="button"
  >
    This is a button
  </button>
</div>
`;

exports[`Button when rendered as an anchor renders correctly 1`] = `
<div>
  <a
    class="fui-Button"
    href="https://www.bing.com"
    role="button"
    tabindex="0"
    type="button"
  >
    This is a button
  </a>
</div>
`;
